<resources>
    <string name="app_name">DirectLeader</string>
    <string name="actionbar_title">DirectLeader</string>
    <string name="tasks_important_text">ВАЖНЫЕ\nЗАДАНИЯ</string>
    <string name="tasks_my_text">МОИ\nЗАДАНИЯ</string>
    <string name="tasks_staff_text">ЗАДАЧИ\nСОТРУДНИКОВ</string>
    <string name="documents_text">ДОКУМЕНТЫ</string>
    <string name="staff_text">СОТРУДНИКИ</string>
    <string name="report_text">ОТЧЕТЫ</string>
    <string name="calendar_text">КАЛЕНДАРЬ</string>
    <string name="action_search">Поиск</string>
    <string name="action_settings">Настройки приложения</string>
    <string name="action_exit">Выход</string>
    <string name="action_more">Получить больше</string>
    <string name="action_userchange">Сменить пользователя</string>
    <string name="action_activate">Активировать</string>
    <string name="action_deactivate">Деактивировать</string>
    <string name="action_geturl">Получить настройки</string>
    <string name="action_all">Все</string>
    <string name="action_favorite">Избранные</string>
    <string name="action_important">Важные</string>
    <string name="action_attachment_get_photo">Сделать снимок</string>
    <string name="action_attachment_pick_device">Выбрать с устройства</string>
    <string name="action_attachment_search_directum">Поиск в Directum</string>
    <string name="preferences_category_connection_title">Подключение</string>
    <string name="preferences_category_update_title">Обновление данных</string>
    <string name="preferences_domain_title">Домен</string>
    <string name="preferences_domain_summary">Домен для подключения к сервису</string>
    <string name="preferences_update_enabled_title">Активировать обновление</string>
    <string name="preferences_update_enabled_summary_on">Обновление БД будет проходить в фоновом режиме</string>
    <string name="preferences_update_enabled_summary_off">Обновление в фоновом режиме отключено</string>
    <string name="preferences_interval_title">Интервал обновления</string>
    <string name="preferences_interval_summary">Интервал запуска сервиса обновления в секундах</string>
    <string name="preferences_category_timeout_title">Timeout</string>
    <string name="preferences_timeout_task_title">Задачи</string>
    <string name="preferences_timeout_task_summary">Timeout на обновление списка задач (сек.)</string>
    <string name="preferences_timeout_rabotnic_title">Сотрудники</string>
    <string name="preferences_timeout_rabotnic_summary">Timeout на обновление списка сотрудников (сек.)</string>
    <string name="preferences_timeout_attachments_title">Документы</string>
    <string name="preferences_timeout_attachments_summary">Timeout на загрузку документов (сек.)</string>
    <string name="users_fragment_search_hint_text">Поиск</string>
    <string name="login_fragment_login_hint_text">Логин или e-mail</string>
    <string name="login_fragment_password_hint_text">Пароль</string>
    <string name="login_fragment_login_button_text">Войти</string>
    <string name="login_fragment_auth_success_text">Авторизация пройдена</string>
    <string name="login_fragment_continue_button_text">Продолжить</string>
    <string name="authorize_failed_message_text">Ошибка авторизации. Проверьте подключение к Интернет и введенные данные.</string>
    <string name="authorize_process_message_text">Авторизация, пожалуйста, подождите...</string>
    <string name="authorize_add_device_message_text">Активация устройства, пожалуйста, подождите...</string>
    <string name="authorize_device_name_hint_message_text">Введите название устройства</string>
    <string name="authorize_device_key_hint_message_text">Введите ключ организации</string>
    <string name="authorize_remove_device_message_text">Деактивация устройства, пожалуйста, подождите...</string>
    <string name="authorize_get_url_message_text">Получение настроек, пожалуйста, подождите...</string>
    <string name="authorize_activate_failed_message_text">Ошибка активации. Проверьте подключение к Интернет и доступность сервера.</string>
    <string name="authorize_activate_success_message_text">Успешная активация/</string>
    <string name="authorize_deactivate_failed_message_text">Ошибка деактивации. Проверьте подключение к Интернет и доступность сервера.</string>
    <string name="authorize_deactivate_success_message_text">Успешная деактивация</string>
    <string name="authorize_deactivate_warning_message_text">После деактивации, устройству будут недоступны данные Directum, устройство перейдет в Demo режим.</string>
    <string name="authorize_geturl_failed_message_text">Ошибка. Проверьте подключение к Интернет и доступность сервера.</string>
    <string name="authorize_geturl_success_message_text" formatted="false">Настройки получены. Приложение настроено на url %s</string>
    <string name="authorize_login_empty_message_text">Имя пользователя не может быть пустым.</string>
    <string name="create_task_dialog_fragment_theme_text">Тема*</string>
    <string name="create_task_dialog_fragment_route_type_text">Тип маршрута</string>
    <string name="create_task_dialog_fragment_undead_text">Без срока</string>
    <string name="create_task_dialog_fragment_performers_text">Исполнители</string>
    <string name="create_task_dialog_fragment_observers_text">Наблюдатели</string>
    <string name="create_task_dialog_fragment_rights_text">Права:</string>
    <string name="create_task_dialog_fragment_importance_text">Высокая</string>
    <string name="create_task_dialog_fragment_noimportance_text">Обычная</string>
    <string name="create_task_dialog_fragment_service_error_text">Невозможно выполнить действие, сервис недоступен.</string>
    <string name="create_task_dialog_fragment_internet_error_text">Невозможно создать задачу. Отсутствует подключение к Интернет.</string>
    <string name="create_task_dialog_fragment_success_text">Задача успешно создана.</string>
    <string name="create_task_dialog_fragment_failed_text">Не удалось создать задачу.</string>
    <string name="create_task_dialog_fragment_attach_failed_text">Невозможно прикрепить файл.</string>
    <string name="myjob_fragment_header_title_text">Тема, Создано, Инициатор</string>
    <string name="myjob_fragment_header_date_text">Срок</string>
    <string name="myjob_fragment_listitem_attachment_text" formatted="false">Вложения: %s</string>
    <string name="myjob_fragment_listitem_subtask_text" formatted="false">Подзадач: %s</string>
    <string name="myjob_fragment_sort_state_text">Невыполненные</string>
    <string name="myjob_fragment_sort_readed_text">Новые</string>
    <string name="myjob_fragment_sort_date_text">Срок</string>
    <string name="myjob_fragment_sort_title_text">Название</string>
    <string name="myjob_fragment_view_button_text">Вид</string>
    <string name="myjob_fragment_listitem_property_text" formatted="false">Дата\u00A0начала:\u00A0%s, Инициатор:\u00A0%s</string>
    <string name="job_detail_fragment_actions_text">Выполнить</string>
    <string name="job_detail_fragment_subtask_text">Подзадача</string>
    <string name="job_detail_fragment_property_text" formatted="false">Инициатор:\u00A0%s, Создана:\u00A0%s, Изменена:\u00A0%s</string>
    <string name="job_detail_fragment_performer_text">Исполнитель</string>
    <string name="job_detail_fragment_date_text">Срок</string>
    <string name="job_detail_fragment_state_text">Состояние</string>
    <string name="job_detail_fragment_importance_text">Важность</string>
    <string name="job_detail_fragment_flag_text">Флаг</string>
    <string name="job_detail_fragment_documents_text">Документов</string>
    <string name="job_detail_fragment_startdate_text">Начало</string>
    <string name="job_detail_fragment_documentslist_text">Документы:</string>
    <string name="job_detail_fragment_resolutionlist_text">Резолюция:</string>
    <string name="job_detail_fragment_comment_text">Комментарий:</string>
    <string name="job_detail_fragment_history_text">История:</string>
    <string name="task_detail_fragment_actions_text">Действие</string>
    <string name="task_detail_fragment_property_text" formatted="false">Инициатор:\u00A0%s, Создана:\u00A0%s, Изменена:\u00A0%s</string>
    <string name="task_detail_fragment_date_text">Срок</string>
    <string name="task_detail_fragment_state_text">Состояние</string>
    <string name="task_detail_fragment_importance_text">Важность</string>
    <string name="task_detail_fragment_flag_text">Флаг</string>
    <string name="task_detail_fragment_documents_text">Документов</string>
    <string name="task_detail_fragment_jobs_text">Заданий</string>
    <string name="task_detail_fragment_subtasks_text">Подзадач</string>
    <string name="task_detail_fragment_comments_text">Комментариев</string>
    <string name="task_detail_fragment_performerslist_text">Исполнители:</string>
    <string name="task_detail_fragment_documentslist_text">Документы:</string>
    <string name="task_detail_fragment_comment_text">Комментарий:</string>
    <string name="task_detail_fragment_history_text">История:</string>
    <string name="task_create_processing_task_text">Создание задачи, пожалуйста, подождите</string>
    <string name="resolution_detail_fragment_property_text" formatted="false">Ответственный:\u00A0%s, Срок исполнения:\u00A0%s, Поручение:\u00A0%s</string>
    <string name="resolution_detail_fragment_add_detail_text">Добавить исполнителя</string>
    <string name="staff_fragment_sort_fio_text">ФИО</string>
    <string name="staff_fragment_sort_overdue_text">Просроченные</string>
    <string name="staff_fragment_sort_today_text">Сегодня</string>
    <string name="staff_fragment_sort_total_text">Всего</string>
    <string name="document_download_fragment_title_text">Документ отсутствует на устройстве.\nЗагрузить документ?</string>
    <string name="document_download_fragment_button_yes_text">Да</string>
    <string name="document_download_fragment_button_no_text">Нет</string>
    <string name="document_download_fragment_button_cancel_text">Отмена</string>
    <string name="document_download_fragment_button_restart_text">Повторить</string>
    <string name="document_download_fragment_failed_text">Ошибка при загрузке файла</string>
    <string name="document_download_fragment_success_text">Файл загружен</string>
    <string name="task_fragment_listitem_property_text" formatted="false">Создана:\u00A0%s, Инициатор:\u00A0%s</string>
    <string name="documents_fragment_header_title_text">Название</string>
    <string name="documents_fragment_header_date_text">Изменено</string>
    <string name="documents_fragment_listitem_attachment_text" formatted="false">Автор:\u00A0%s, Дата\u00A0создания:\u00A0%s, Версия:\u00A0%s, Расширение:\u00A0%s</string>
    <string name="documents_fragment_sort_date_text">Дата</string>
    <string name="documents_fragment_sort_title_text">Название</string>
    <string name="documents_fragment_sort_author_text">Автор</string>
    <string name="documents_fragment_sort_type_text">Тип</string>
    <string name="task_loading_data_text">Загрузка данных, пожалуйста, подождите..</string>
    <string name="update_db_process_rabotnic_message_text">Обновление данных, пожалуйста, подождите..</string>
    <string name="update_db_process_task_message_text">Обновление данных, пожалуйста, подождите..</string>
    <string name="update_db_process_client_settings_message_text">Обновление данных, пожалуйста, подождите..</string>
    <string name="reference_save_progress_message_text">Сохранение резолюции, пожалуйста, подождите..</string>
    <string name="reference_save_progress_nointernet_message_text">Ошибка. Проверьте подключение к Интернет и доступность сервера.</string>
    <string name="search_direcrum_searchprocess_task_message">Поиск данных в Directum, пожалуйста, подождите..</string>
    <string name="search_direcrum_searchfailed_message">Не удалось выполнить поиск</string>
    <string name="update_db_finished_message_text">Обновление данных завершено</string>
</resources>