<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preferences_category_connection_title">
		<EditTextPreference
			android:key="domain_key"
			android:title="@string/preferences_domain_title"
			android:summary="@string/preferences_domain_summary">
        </EditTextPreference>
		
        <EditTextPreference
            android:key="lastsyncdate_rabotnic_key"
            android:title="lastsyncdate_rabotnic_key"
            android:summary="Дата последнего обновления справочника Работники. Очистите, для сброса." />
        <EditTextPreference 
            android:key="lastsyncdate_task_key"
            android:title="lastsyncdate_task_key"
            android:summary="Дата последнего обновления Задач. Очистите, для сброса." />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_timeout_title">
        <EditTextPreference
            android:key="timeout_task"
            android:title="@string/preferences_timeout_task_title"
            android:summary="@string/preferences_timeout_task_summary"
            android:defaultValue="600"
            />
        <EditTextPreference
            android:key="timeout_rabotnic"
            android:title="@string/preferences_timeout_rabotnic_title"
            android:summary="@string/preferences_timeout_rabotnic_summary"
            android:defaultValue="600"
            />
        <EditTextPreference
            android:key="timeout_attachments"
            android:title="@string/preferences_timeout_attachments_title"
            android:summary="@string/preferences_timeout_attachments_summary"
            android:defaultValue="600"
            />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_category_update_title">
        <CheckBoxPreference
	        android:key="update_enabled"
	        android:title="@string/preferences_update_enabled_title"
	        android:summaryOn="@string/preferences_update_enabled_summary_on"
	        android:summaryOff="@string/preferences_update_enabled_summary_off"
	        android:defaultValue="true"
	         />
        <EditTextPreference
            android:key="update_interval"
            android:title="@string/preferences_interval_title"
            android:summary="@string/preferences_interval_summary"
            android:defaultValue="1800000"
            />
    </PreferenceCategory>
</PreferenceScreen>