<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >
    
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/document_download_fragment_title_text"
        android:gravity="center_horizontal"
        />
    
    <TextView
        android:id="@+id/documentNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp" 
        android:gravity="center_horizontal"
        android:text="Приказ о премировании сотрудников отдела программирования.docx"
        />
    
    <ProgressBar 
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/failedTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp" 
        android:gravity="center_horizontal"
        android:text="@string/document_download_fragment_failed_text"
        android:visibility="gone"
        />
    
    <LinearLayout 
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/buttonYes"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" 
            android:layout_weight="1"
            android:text="@string/document_download_fragment_button_yes_text"
            android:background="@drawable/button_transparent_selector"
            android:layout_marginRight="5dp"
            android:textColor="@color/gray33"
            />
        <Button
            android:id="@+id/buttonNo"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" 
            android:layout_weight="1"
            android:text="@string/document_download_fragment_button_no_text"
            android:background="@drawable/button_transparent_selector"
            android:layout_marginLeft="5dp"
            android:textColor="@color/gray33"
            />
       <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:text="@string/document_download_fragment_button_cancel_text"
            android:background="@drawable/button_transparent_selector"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/gray33"
            android:visibility="gone"
            />
       <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" 
            android:text="@string/document_download_fragment_button_restart_text"
            android:background="@drawable/button_transparent_selector"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/gray33"
            android:visibility="gone"
            />
    </LinearLayout>
</LinearLayout>
