<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dddddd"
    >
    <RelativeLayout 
	    android:id="@+id/topBarLayout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/top_bar"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:paddingRight="20dp"
	    android:paddingLeft="20dp"
	    >
	    <ImageButton
	        android:id="@+id/cancelButton"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="20dp"
	        android:src="@drawable/ic_cancel"
	        android:background="@drawable/button_transparent_home_selector"
	        />
	    <ImageButton
            android:id="@+id/okButton"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_ok"
            android:background="@drawable/button_transparent_home_selector"
            />
	</RelativeLayout>
	
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
	    <ImageView
	        android:id="@+id/importanceView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_importance"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="20dp"
	        android:layout_gravity="center_vertical"
	        />
        <EditText
	        android:id="@+id/titleEditText"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/create_task_dialog_fragment_theme_text"
	        android:textColorHint="@color/gray"
	        android:background="@drawable/edittext_background_rounded"
	        android:singleLine="true"
	        />
    </LinearLayout>
    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/gray"
        android:gravity="top"
        android:lines="5"
        android:singleLine="false"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_background_rounded"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:weightSum="1.0"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/routeTypeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_task_dialog_fragment_route_type_text"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_background_rounded"
            android:singleLine="true"
            android:enabled="false"
            android:layout_marginRight="30dp"
            android:layout_weight="0.3"
            />
        <EditText
            android:id="@+id/deadlineEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_background_rounded"
            android:singleLine="true"
            android:focusable="false"
            android:layout_weight="0.7"
            android:enabled="false"
            android:hint="@string/create_task_dialog_fragment_undead_text"
            />
    </LinearLayout>
    <!-- Метки "Исполнители" и "Наблюдатели" -->
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:id="@+id/performersLabelView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/create_task_dialog_fragment_performers_text"
            android:textColor="@color/blue"
            android:clickable="true"
            />
        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:id="@+id/observersLabelView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/create_task_dialog_fragment_observers_text"
            android:textColor="@color/blue"
            android:clickable="true"
            />
    </RelativeLayout>
    <!-- Список исполнителей и наблюдателей -->
    <ScrollView 
        android:fillViewport="false"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/edittext_background_rounded"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >
        <LinearLayout android:id="@+id/performersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:id="@+id/rightsTextView"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create_task_dialog_fragment_rights_text"
            android:layout_marginRight="5dp"
            />
        <EditText
            android:id="@+id/rightsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background_rounded"
            android:singleLine="true"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:enabled="false"
            />
        <ImageButton
            android:id="@+id/attachmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_transparent_selector"
            android:src="@drawable/ic_attachment"
            />
    </LinearLayout>
    
</LinearLayout>
